--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build-prod": "webpack --config webpack.prod.js"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
