--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start-dev": "webpack-dev-server --config webpack.dev.js --open",
     "start-prod": "webpack-dev-server --config webpack.prod.js --open",
     "build-dev": "webpack --config webpack.dev.js",
-    "build-prod": "webpack --config webpack.prod.js"
+    "build-prod": "webpack --config webpack.prod.js",
+    "build-ssr-dev": "webpack --config webpack.ssr.js"
   },
   "dependencies": {
     "@types/express": "^4.17.6",
@@ -29,6 +30,7 @@
     "css-loader": "^3.5.3",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "ignore-loader": "^0.1.2",
     "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
