--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start-prod": "webpack-dev-server --config webpack.prod.js --open",
     "build-dev": "webpack --config webpack.dev.js",
     "build-prod": "webpack --config webpack.prod.js",
-    "build-ssr-dev": "webpack --config webpack.ssr.js"
+    "build-ssr-dev": "webpack --config webpack.ssr.dev.js"
   },
   "dependencies": {
     "@types/express": "^4.17.6",
