--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start-prod": "webpack-dev-server --config webpack.csr.prod.js --open",
     "build-dev": "webpack --config webpack.csr.dev.js",
     "build-prod": "webpack --config webpack.csr.prod.js",
-    "build-ssr-dev": "webpack --config webpack.ssr.dev.js"
+    "build-ssr-dev": "webpack --config webpack.ssr.dev.js",
+    "build-ssr-prod": "webpack --config webpack.ssr.prod.js"
   },
   "dependencies": {
     "@types/express": "^4.17.6",
